force-app/main/default/objects/Applicant__c/fields/Aadhar_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Reference_Number__c</fullName>
    <label>Aadhar Reference Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>