force-app/main/default/objects/Applicant__c/fields/Applicant_Photo__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Photo__c</fullName>
    <label>Applicant Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>