force-app/main/default/objects/Applicant__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB</label>
    <required>true</required>
    <type>Date</type>
</CustomField>