force-app/main/default/objects/Applicant__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <formula>IF( Age__c &gt;=18,  IMAGE(&apos;https://alexislimited-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0155j000003UcDS&amp;oid=00D5j00000CfUh2&amp;lastMod=1692268385000&apos;,&apos;YES LOGO&apos;, 30,30),
 IMAGE(&apos;https://alexislimited-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0155j000003UbeT&amp;oid=00D5j00000CfUh2&amp;lastMod=1692268656000&apos;, &apos;NO LOGO&apos;, 30,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligibility</label>
    <type>Text</type>
</CustomField>