force-app/main/default/objects/Applicant__c/fields/Eligible_For_Voting__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Voting__c</fullName>
    <formula>IF( Age__c &gt;=18, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible For Voting</label>
    <type>Checkbox</type>
</CustomField>