force-app/main/default/objects/Applicant__c/fields/Gender_Logo__c.field-meta.xml
<CustomField>
    <fullName>Gender_Logo__c</fullName>
    <formula>CASE( Gender__c , &apos;Male&apos;,  IMAGE(&apos;https://alexislimited-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0155j000003Ucon&amp;oid=00D5j00000CfUh2&amp;lastMod=1692269646000&apos;,&apos;Male Logo&apos;, 40, 40) , 
&apos;Female&apos;, IMAGE(&apos;https://alexislimited-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0155j000003UcuH&amp;oid=00D5j00000CfUh2&amp;lastMod=1692269863000&apos;, &apos;Female Logo&apos;, 40, 40), 
&apos;Transgender&apos;, IMAGE(&apos;https://alexislimited-dev-ed.develop.file.force.com/servlet/servlet.ImageServer?id=0155j000003Ucxg&amp;oid=00D5j00000CfUh2&amp;lastMod=1692269974000&apos;, &apos;Trans Logo&apos;, 40, 40),&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender Logo</label>
    <type>Text</type>
</CustomField>