force-app/main/default/objects/Applicant__c/fields/Personal_Website_Address_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Personal_Website_Address_If_Any__c</fullName>
    <label>Personal Website Address(If Any)</label>
    <type>Url</type>
</CustomField>