force-app/main/default/objects/Applicant__c/fields/Required_Documents_List__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents_List__c</fullName>
    <label>Required Documents List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar Card</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>