force-app/main/default/objects/Applicant__c/fields/Special_Mark_On_Body__c.field-meta.xml
<CustomField>
    <fullName>Special_Mark_On_Body__c</fullName>
    <label>Special Mark On Body</label>
    <type>TextArea</type>
</CustomField>