force-app/main/default/objects/Applicant__c/fields/Voter_ID__c.field-meta.xml
<CustomField>
    <fullName>Voter_ID__c</fullName>
    <label>Voter ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>