force-app/main/default/objects/Applicant__c/fields/X5_Min_After_Record_Creation__c.field-meta.xml
<CustomField>
    <fullName>X5_Min_After_Record_Creation__c</fullName>
    <formula>CreatedDate + 0.00345</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 Min After Record Creation</label>
    <type>DateTime</type>
</CustomField>