force-app/main/default/objects/Applicant__c/validationRules/Eligible_for_PV_n_G_is_M_or_Trans_n_DoB.validationRule-meta.xml
<ValidationRule>
    <fullName>Eligible_for_PV_n_G_is_M_or_Trans_n_DoB</fullName>
    <active>false</active>
    <errorConditionFormula>( Police_Verification__c ) &amp;&amp; ( ISPICKVAL( Gender__c, &apos;Male&apos;) ||  ISPICKVAL( Gender__c , &apos;Transgender&apos;) )  &amp;&amp;  
   (YEAR(DOB__c)  &lt;  2000)</errorConditionFormula>
    <errorMessage>Male or Transgender Applicant withr PV born before 2000 not allowed</errorMessage>
</ValidationRule>