force-app/main/default/objects/Applicant__c/validationRules/Prevent_Applicant_if_Age_is_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Applicant_if_Age_is_less_than_18</fullName>
    <active>false</active>
    <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
    <errorDisplayField>DOB__c</errorDisplayField>
    <errorMessage>Applicant must not be less than 18</errorMessage>
</ValidationRule>