force-app/main/default/objects/Applicant__c/validationRules/Prevent_Applicant_if_PV_and_Gen_M_or_F.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Applicant_if_PV_and_Gen_M_or_F</fullName>
    <active>false</active>
    <errorConditionFormula>(Police_Verification__c) &amp;&amp; (ISPICKVAL( Gender__c, &apos;Male&apos;)||ISPICKVAL( Gender__c , &apos;Female&apos;))</errorConditionFormula>
    <errorMessage>Male or Female Applicant with PV eligibility not allowed</errorMessage>
</ValidationRule>