force-app/main/default/objects/Applicant__c/validationRules/Prevent_Applicant_Rec_from_Cloning.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Applicant_Rec_from_Cloning</fullName>
    <active>false</active>
    <errorConditionFormula>ISCLONE()</errorConditionFormula>
    <errorMessage>Applicant Record not allowed to clone</errorMessage>
</ValidationRule>