force-app/main/default/objects/Applicant__c/validationRules/Prevent_Blank_PAN_CARD_for_CustCare_PF.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Blank_PAN_CARD_for_CustCare_PF</fullName>
    <active>false</active>
    <description>Prevent Blank Pan Card for Customer Care Profile</description>
    <errorConditionFormula>ISBLANK( PAN_Card__c ) &amp;&amp;  $Profile.Name = &apos;Customer Care&apos;</errorConditionFormula>
    <errorMessage>PAN card must not be blank for Customer Care Profile Users</errorMessage>
</ValidationRule>