force-app/main/default/objects/Applicant__c/validationRules/Prevent_Blank_PC_for_Bunty_User_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Blank_PC_for_Bunty_User_Only</fullName>
    <active>false</active>
    <description>Prevent Blank Pan Card for Bunty User Only</description>
    <errorConditionFormula>ISBLANK( PAN_Card__c )  &amp;&amp;  $User.Id = &apos;0055j000009QYW2&apos;</errorConditionFormula>
    <errorMessage>Pan Card can&apos;t be Blank</errorMessage>
</ValidationRule>