force-app/main/default/objects/Applicant__c/validationRules/Prevent_Invalid_Email_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Invalid_Email_ID</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( REGEX( Email_ID__c , &apos;([a-zA-Z0-9 ._\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;))</errorConditionFormula>
    <errorDisplayField>Email_ID__c</errorDisplayField>
    <errorMessage>Not a valid Email ID</errorMessage>
</ValidationRule>