force-app/main/default/objects/Applicant__c/validationRules/Prevent_invalid_PAN_CARD.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_invalid_PAN_CARD</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( REGEX( PAN_Card__c , &apos;[A-Z]{5}[0-9]{4}[A-Z]{1}&apos;) )</errorConditionFormula>
    <errorMessage>PAN Card is not Valid</errorMessage>
</ValidationRule>