force-app/main/default/objects/Applicant__c/validationRules/Prevent_Male_or_Female_Gender.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Male_or_Female_Gender</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT( Gender__c) = &apos;Male&apos;  ||  TEXT( Gender__c) = &apos;Female&apos;</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>Male or Female Applicants are not Allowed for now</errorMessage>
</ValidationRule>