force-app/main/default/objects/Applicant__c/validationRules/Prevent_Special_Symbol_and_nos_in_FN.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Special_Symbol_and_nos_in_FN</fullName>
    <active>false</active>
    <description>Prevent Special symbols in First and Last Name</description>
    <errorConditionFormula>NOT( REGEX( First_Name__c , &apos;^[a-z  A-Z]*$&apos;) ) || 
NOT( REGEX( Last_Name__c  , &apos;^[a-z  A-Z]*$&apos;) )</errorConditionFormula>
    <errorMessage>Not a Valid Name</errorMessage>
</ValidationRule>